Removed display: flex to fix the extra padding on the left

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -4,6 +4,28 @@
   height: 100%;
   position: absolute;
   padding: 1em;
+
+  
+.t-logo {
+  font-family: "Archivo Black", sans-serif;
+  color: #ff66ff;
+  text-shadow: -5px 0px 0px #ffff66;
+  font-size: 6rem;
+  text-align: center;
+  margin-top: 0.1em;
+  line-height: 0.8em;
+}
+
+.tedecast {
+  font-family: "Montserrat", sans-serif;
+  color: #ffff66;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
   a {
     font-size: 2.5em;
     color: #ffff66;
@@ -85,25 +107,6 @@
   }
 }
 
-.t-logo {
-  font-family: "Archivo Black", sans-serif;
-  color: #ff66ff;
-  text-shadow: -5px 0px 0px #ffff66;
-  font-size: 6rem;
-  text-align: center;
-  margin-top: 0.1em;
-  line-height: 0.8em;
-}
-
-.tedecast {
-  font-family: "Montserrat", sans-serif;
-  color: #ffff66;
-  text-decoration: none;
-  font-size: 1rem;
-  font-weight: 500;
-  text-align: center;
-  margin-bottom: 1em;
-}
 .navbar-links {
   display: flex;
   flex-direction: column;
@@ -113,7 +116,6 @@
 // Mobile changes
 @media (max-width: 825px) {
   .navbar {
-    display: flex;
     flex-direction: row;
     width: 100%;
     height: 6em;
